--- a/DAAExampleModificado/pom.xml
+++ b/DAAExampleModificado/pom.xml
@@ -32,6 +32,7 @@
 		
 		<!-- Tests dependencies -->
 		<junit.version>4.12</junit.version>
+		<java-hamcrest.version>2.0.0.0</java-hamcrest.version>
 		<easymock.version>3.4</easymock.version>
 		<selenium.java.version>2.49.1</selenium.java.version>
 		<spring.test.version>4.2.4.RELEASE</spring.test.version>
@@ -45,7 +46,7 @@
 		<failsafe.version>2.19.1</failsafe.version>
 		<maven.war.plugin.version>2.6</maven.war.plugin.version>
 		<tomcat.maven.plugin.version>2.2</tomcat.maven.plugin.version>
-		<jacoco.version>0.7.5.201505241946</jacoco.version>
+		<jacoco.version>0.7.6.201602180812</jacoco.version>
 		<cargo-maven2-plugin.version>1.4.18</cargo-maven2-plugin.version>
 	</properties>
 
@@ -81,6 +82,12 @@
 			<artifactId>junit</artifactId>
 			<version>${junit.version}</version>
 			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>java-hamcrest</artifactId>
+			<version>${java-hamcrest.version}</version>
 		</dependency>
 		
 		<dependency>
